# braindance

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  LICENSE  README.md  RESUME.md  deploy.sh  docker-compose.yml
.claude/hooks/: block-loon-main-writes.py  test_block_loon_main_writes.py
.github/workflows/: deploy-api.yml  disjoint-www.yml  pages.yml
.obsidian/: workspace.json
api/: Dockerfile  package-lock.json  package.json
api/src/: adapter.ts  config.ts  dedup.ts  funnels.ts  git.ts  inbox.ts  index.ts  layout.ts  migrate.ts  notes.ts  objectadapter.ts  objectstore.ts  proposals.ts  render.ts  scopes.ts  vault.ts
api/test/: dedup.test.ts  git.test.ts  migrate.test.ts  objectadapter.test.ts  proposals.test.ts
ctx/: noon-moon-net.md  vps-setup.md
ctx/ephemeral/: README.md
ctx/inputs/: README.md
ctx/outputs/: README.md
ctx/skills/: .gitignore
ctx/skills/engineering/: ask-matt.md  codebase-design.md  diagnosing-bugs.md  improve-codebase-architecture.md  prototype.md  setup-matt-pocock-skills.md  tdd.md  triage.md
ctx/tools/: tournament-parse-transcript.py  tournament-run.py  tournament-score.py  tournament-spec.json
ctx/tools/music/: Cargo.toml
ctx/tools/music/src/: apple_music.rs  lib.rs  main.rs  vault_notes.rs
ctx/vault/: .gitignore  Braindance.md  Concepts.md  Obsidian.md  Projects.md  Repos.md  TODO.md
ctx/www/: README.md  index.html
docs/: orchestration.md  serving.md  vault.md  worktrees.md
ops/: README.md  braindance-sync.service  braindance-sync.timer  sync.sh
www/: index.html
(+37 files in other folders)
